Fixed BreadCrumb not visible

--- a/client/public/styles.css
+++ b/client/public/styles.css
@@ -5,13 +5,6 @@
         margin: auto !important;
         padding: 10px
     }
-
-    #home-container{
-        flex-direction: column;
-    }
-    #hamburger{
-        display: inline;
-    }
 }
 
 
@@ -20,9 +13,6 @@
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 841px) {
-    #hamburger{
-        display: none;
-    }
 }
 *::-webkit-scrollbar {
     display: none;
